--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "./types/"
     ],
     "scripts": {
-        "compile": "npx tsc",
+        "prepare": "npx husky install",
+        "compile": "npx tsc --project ./tsconfig.debug.json",
         "compile:watch": "npm run compile -- --watch",
-        "build": "rm -rf ./build/ && rm -rf ./types/ && npx tsc",
+        "build": "rm -rf ./build/ && rm -rf ./types/ && npx tsc --project ./tsconfig.build.json",
         "lint": "npx eslint ./src/*.ts",
-        "lint:fix": "npx eslint --fix ./src/*.ts"
+        "lint:fix": "npx eslint --fix ./src/*.ts",
+        "test": "node ./scripts/test.js"
     },
     "devDependencies": {
         "@eslint/js": "^9.2.0",
@@ -35,7 +37,8 @@
         "@typescript-eslint/eslint-plugin": "^7.8.0",
         "@typescript-eslint/parser": "^7.8.0",
         "eslint": "^8.57.0",
-        "eslint-plugin-typescript": "^0.14.0",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.2",
         "typescript": "^5.3.3",
         "typescript-eslint": "^7.8.0"
     }
