--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "lint": "npx eslint ./src/*.ts",
         "lint:fix": "npx eslint --fix ./src/*.ts",
         "test": "node ./scripts/test.js",
-        "examples": "node ./scripts/examples.js"
+        "plots": "node ./scripts/plots.js"
     },
     "devDependencies": {
         "@eslint/js": "^9.2.0",
